# rustyplay

./: .gitignore  Cargo.toml  README.md
src/: audioinfo.rs  display.rs  lyrics.rs  lyrics_parse.rs  main.rs  player.rs  scrolledbuf.rs  timer.rs
