[package]
name = "musicplayer"
version = "1.0.4"
edition = "2021"
authors = ["F치bi치n Varga", "F치bi치n Varga <varga2mail@gmail.com>"]
description = "A terminal-based music player."
repository = "https://github.com/br0kenpixel/rustyplay"

[dependencies]
rodio = "0.16.0"
sndfile = "0.1.1"
ncurses = { version = "5.101.0", features = ["wide"] }
pausable_clock = "1.0.1"
json = "0.12.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
